# litplot

./: Cargo.toml  README.md
assets/: utils.js
src/: error.rs  lib.rs  utils.rs
src/plotly/: chart.rs  constants.rs  data_provider.rs  js.rs  js_macros.rs  line.rs  mod.rs  plot.rs  report.rs
src/plotly/charts/: base.rs  chart.rs  data.rs  mod.rs
src/plotly/charts/types/: heatmap.rs  line.rs  mod.rs
src/plotly/data_provider/: binary_provider.rs  data_format.rs  data_provider.rs  mod.rs
src/plotly/style/: axis.rs  legend.rs  macros.rs  mod.rs  other.rs  style.rs
tests/: js.rs  mod.rs  plot.rs
