[package]
name = "litplot"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
litcontainers = {path = "../litcontainers/litcontainers"}
litio = {path = "../litcontainers/litio"}
num-traits = "0.2"
itertools = "0.8.0"
typed-html = "0.2.1"
base64 = "0.10.1"