[package]
name = "litplot"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
litcontainers = {path = "../litcontainers/litcontainers"}
litio = {path = "../litcontainers/litio"}
num-traits = "0.2"
itertools = "0.8.0"
base64 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.7.2"
derive-getters = "0.0.8"
rand = "0.7.0"

